[package]
name = "extypst_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "extypst_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.28.0"
typst = { git = "https://github.com/typst/typst" }
typst-library = { git = "https://github.com/typst/typst.git" }

# typst
comemo = "0.3.0"
elsa = "1.8.1"
once_cell = "1"
memmap2 = "0.6.1"
same-file = "1.0.6"
siphasher = "0.3.10"
walkdir = "2.3.3"
dirs = "5.0.1"
